another commit to test

--- a/conservation.html
+++ b/conservation.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Conservation</title>
 	<meta charset="utf-8">
-    <link rel="stylesheet" href="styles08.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
@@ -26,7 +26,7 @@
             </form>
             <form>
                 <fieldset>
-                    <legend>Personal Information (If you want to be part of the monthly news letter)</legend>
+                    <legend>Personal Information (If you want to be part of the monthly digital news letter)</legend>
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name">
                     <br>
@@ -41,7 +41,7 @@
             </form>
             <form>
                 <fieldset>
-                    <legend>Address Information (If you want to be part of the monthly news letter)</legend>
+                    <legend>Address Information (If you want to be part of the bi-yearly physical magazine)</legend>
                     <label for="address">Address:</label>
                     <br>
                     <textarea id="address" name="address" rows="4" cols="50"></textarea>
