--- a/conservation.html
+++ b/conservation.html
@@ -3,26 +3,31 @@
 <head>
 	<title>Conservation</title>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="fish"></div>
     <main>
         <h1>We are changing the Ocean with your help!</h1>
         <p>Our global community of Ocean Torchbearers is leading a powerful movement to restore ourselves, our communities and the blue planet we call home.</p>
             
-        <div id="tab-desk" class="grid-container">
+        <img class="fish-image" src="images/pelican-landingpage.jpg" alt="fish fish fish">
+
+        <h2 class="mobile"> Check us out on a tablet or computer to see the forms! </h2>
+        
+        <div class="tab-desk grid-container">
             <form>
                 <fieldset>
                     <legend>FAQs</legend>
-                    <label for="faq-options">What would you like to </label><br>
+                    <label for="faq-options">What would you like to know?</label><br>
                     <input type="checkbox" id="faq-option-1" name="faq-option" value="Option 1">
-                    <label for="faq-option-1">Option 1</label><br>
+                    <label for="faq-option-1">Fish Health</label><br>
                     <input type="checkbox" id="faq-option-2" name="faq-option" value="Option 2">
-                    <label for="faq-option-2">Option 2</label><br>
-                    <input type="checkbox" id="faq-option-3" name="faq-option" value="Option 3">                        <label for="faq-option-3">Option 3</label><br>
+                    <label for="faq-option-2">Fish Stats</label><br>
+                    <input type="checkbox" id="faq-option-3" name="faq-option" value="Option 3">
+                    <label for="faq-option-3">Fish eyeball sales</label><br>
                     <input type="checkbox" id="faq-option-4" name="faq-option" value="Option 4">
-                    <label for="faq-option-4">Option 4</label><br>
+                    <label for="faq-option-4">Fishing environmentally</label><br>
                 </fieldset>
                 <input type="submit" value="Submit">
             </form>
