styles, contact us, membership, conservation edited

--- a/conservation.html
+++ b/conservation.html
@@ -105,10 +105,10 @@
 
         </div>
 
-
-
-
     </main>
+    <footer>
+        <p>&copy; 2024 PADI AWARE Foundation. All rights reserved.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
