--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,50 @@
-<!-- Hello -->
-<!-- Hello Again -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PADI AWARE Foundation</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+    <header>
+        <h1>PADI AWARE Foundation</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="courses.html">Courses</a></li>
+                <li><a href="membership.html">Membership</a></li>
+                <li><a href="conservation.html">Conservation</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div>
+            <h2>Contact Information</h2>
+            <p>Feel free to contact us using the information below:</p>
+            <ul>
+                <li>Email: <a href="mailto:example@example.com">padi@gmail.com</a></li>
+                <li>Phone: <a href="tel:+155818818">+12568550</a></li>
+                <li>Address: 500 Sea World Dr., San Diego, CA 92109
+                </li>
+            </ul>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27484604.17339757!2d-156.2498771!3d32.76429579999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80deaa60b159eb77%3A0xb8b8a676d2bbc3fe!2sSeaWorld%20San%20Diego!5e0!3m2!1sen!2sus!4v1713799282528!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 PADI AWARE Foundation. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+
+
+
+
+
+
+
 
