--- a/template.html
+++ b/template.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+    Author: Joe and Hunter
+    Date: 4/22/2024
+    File name: template.html
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
