Started index page, added style rules and gallery page

--- a/conservation.html
+++ b/conservation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Conservation</title>
+	<title>PADI AWARE Foundation | Conservation</title>
 	<meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
