--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,71 @@
-hekjhsfaphfes
+<!DOCTYPE html>
+<!--
+    Author: Joe and Hunter
+    Date: 4/22/2024
+    File name: gallery.html
+-->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PADI AWARE Foundation | Gallery</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+    <header>
+        <h1>PADI AWARE Foundation</h1>
+    </header>
+     <!-- Mobile Nav -->
+     <nav class="mobile-nav">
+        <div id="nav-links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="partnership.html">Partnership</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="faqs.html">FAQs</a>
+            <a href="contact.html">Contact Us</a>
+        </div>
+        <a class="nav-icon" onclick="menu()">
+            <div id="icon">&#9776;</div>
+        </a>
+    </nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="membership.html">Membership</a></li>
+            <li><a href="conservation.html">Conservation</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
+
+    <main>
+
+        <section class="gallery">
+            <div class="image">
+                <img src="images/dolphins.jpg" alt="2 dolphins swimming">
+            </div>
+            <div class="image">
+                <img src="images/orca.jpg" alt="Orca in the water">
+            </div>
+            <div class="image">
+                <img src="images/sea-turtle.jpg" alt="sea turtle swimming in open ocean">
+            </div>
+            <div class="image">
+                <img src="images/seal.jpg" alt="cute seal">
+            </div>
+            <div class="image">
+                <img src="images/sharkCloseUp.jpg" alt="shark swimming in open ocean">
+            </div>
+            <div class="image">
+                <img src="images/whale.jpg" alt="whale jumping out of the water">
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 PADI AWARE Foundation. All rights reserved.</p>
+    </footer>
+</body>
+</html>
