--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PADI AWARE Foundation | Gallery</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
@@ -62,10 +64,156 @@
                 <img src="images/whale.jpg" alt="whale jumping out of the water">
             </div>
         </section>
+
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Gallery</h2>
+                <h3 class="section-subheading text-muted">Check out the animals we have helped rehabilitate!</h3>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Portfolio item 1-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="images/dolphins.jpg" alt="Man fertilizating a lawn">
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Lawn Fertilization</div>
+                            <div class="portfolio-caption-subheading text-muted">Guaranteed to make your neighbors
+                                jealous!</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Portfolio item 2-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="Man mowing a lawn">
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Classic Mow</div>
+                            <div class="portfolio-caption-subheading text-muted">Let's get your lawn looking fresh
+                                again!</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Portfolio item 3-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="Man using a trimmer on a lawn">
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Classic Trim</div>
+                            <div class="portfolio-caption-subheading text-muted">Get that perfect edge you've always
+                                wanted!</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                    <!-- Portfolio item 4-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="Man spraying weeds">
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Spray Weeds</div>
+                            <div class="portfolio-caption-subheading text-muted">!Grass only zone!</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
+                    <!-- Portfolio item 5-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="...">
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Placeholder</div>
+                            <div class="portfolio-caption-subheading text-muted">Placeholder</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <!-- Portfolio item 6-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="...">
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Placeholder</div>
+                            <div class="portfolio-caption-subheading text-muted">Placeholder</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
         <p>&copy; 2024 PADI AWARE Foundation. All rights reserved.</p>
     </footer>
+    <!-- Portfolio Modals-->
+    <!-- Portfolio item 1 modal popup-->
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal">
+                </div>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <div class="modal-body">
+                                <!-- Project details-->
+                                <h2 class="text-uppercase">Lawn Fert.</h2>
+                                <p class="item-intro text-muted">We offer lawn fertilization!</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg"
+                                    alt="Man fertilizing a lawn">
+                                <p>Our lawn fertilization process delivers essential nutrients for vibrant, healthy
+                                    grass. Using premium fertilizers and precise application techniques, we ensure
+                                    optimal absorption and lasting results. Trust us to nourish your lawn for lush,
+                                    resilient growth year-round.</p>
+                                <ul class="list-inline">
+                                    <li>
+                                        <strong>Included In:</strong>
+                                        Lloyd Special Package
+                                    </li>
+                                    <li>
+                                        <strong>Base Cost:</strong>
+                                        $50 (Subject to change)
+                                    </li>
+                                </ul>
+                                <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
+                                    type="button">
+                                    <i class="fas fa-xmark me-1"></i>
+                                    Close
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
