--- a/index.html
+++ b/index.html
@@ -52,8 +52,15 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 PADI AWARE Foundation. All rights reserved.</p>
-    </footer>
+	<footer>
+		<div class="copyright">
+			<p>&copy; Copyright 2021. All Rights Reserved.</p>
+			<p><a href="mailto:jeeed@gmail.com">padi@gmail.com</a></p>
+		</div>
+		<div class="social">
+			<a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-logo.png" alt="Facebook Logo"></a>
+			<a href="https://www.twitter.com/" target="_blank"><img src="images/twitter-logo.png" alt="Twitter Logo"></a>
+		</div>
+	</footer>
 </body>
 </html>
