Finished interactive images

--- a/gallery.html
+++ b/gallery.html
@@ -48,28 +48,7 @@
     </nav>
 
     <main>
-        <!--
-        <section class="gallery">
-            <div class="image">
-                <img src="images/dolphins.jpg" alt="2 dolphins swimming">
-            </div>
-            <div class="image">
-                <img src="images/orca.jpg" alt="Orca in the water">
-            </div>
-            <div class="image">
-                <img src="images/sea-turtle.jpg" alt="sea turtle swimming in open ocean">
-            </div>
-            <div class="image">
-                <img src="images/seal.jpg" alt="cute seal">
-            </div>
-            <div class="image">
-                <img src="images/sharkCloseUp.jpg" alt="shark swimming in open ocean">
-            </div>
-            <div class="image">
-                <img src="images/whale.jpg" alt="whale jumping out of the water">
-            </div>
-        </section>
-    -->
+        
         <section class="gallery" id="portfolio">
             <div class="container">
                 <div class="text-center">
@@ -90,7 +69,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Rehabilitated Dolphins</div>
-                                <div class="portfolio-caption-subheading text-muted">Look how happy they are!</div>
+                                <div class="portfolio-caption-subheading text-muted">Introducing Luna and Neptune!</div>
                             </div>
                         </div>
                     </div>
@@ -107,7 +86,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Rehabilitated Orca</div>
-                                <div class="portfolio-caption-subheading text-muted">Look how happy she is!</div>
+                                <div class="portfolio-caption-subheading text-muted">Introducing Aurora!</div>
                             </div>
                         </div>
                     </div>
@@ -125,7 +104,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Rehabilitated Sea Turtle</div>
-                                <div class="portfolio-caption-subheading text-muted">Look how happy he is!</div>
+                                <div class="portfolio-caption-subheading text-muted">Introducing Aqua!</div>
                             </div>
                         </div>
                     </div>
@@ -142,7 +121,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Rehabilitated Seal</div>
-                                <div class="portfolio-caption-subheading text-muted">Look how happy he is!</div>
+                                <div class="portfolio-caption-subheading text-muted">Introducing Finn!</div>
                             </div>
                         </div>
                     </div>
@@ -160,7 +139,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Rehabilitated Shark</div>
-                                <div class="portfolio-caption-subheading text-muted">Look how happy he is!</div>
+                                <div class="portfolio-caption-subheading text-muted">Introducing Maverick!</div>
                             </div>
                         </div>
                     </div>
@@ -176,8 +155,8 @@
                                 </div>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Rescued Whale</div>
-                                <div class="portfolio-caption-subheading text-muted">So Majestic!</div>
+                                <div class="portfolio-caption-heading">Rehabilitated Whale</div>
+                                <div class="portfolio-caption-subheading text-muted">Introducion Orion!</div>
                             </div>
                         </div>
                     </div>
@@ -187,46 +166,176 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 PADI AWARE Foundation. All rights reserved.</p>
         <div class="copyright">
-			<p>&copy; Copyright 2021. All Rights Reserved.</p>
-			<p><a href="mailto:jeeed@gmail.com">padi@gmail.com</a></p>
+            <p>&copy; Copyright 2021. All Rights Reserved.</p>
+            <p><a href="mailto:jeeed@gmail.com">padi@gmail.com</a></p>
         </div>
         <div class="social">
-			<a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-logo.png" alt="Facebook Logo"></a>
-			<a href="https://www.twitter.com/" target="_blank"><img src="images/twitter-logo.png" alt="Twitter Logo"></a>
-		</div>
+            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-logo.png"
+                    alt="Facebook Logo"></a>
+            <a href="https://www.twitter.com/" target="_blank"><img src="images/twitter-logo.png"
+                    alt="Twitter Logo"></a>
+        </div>
     </footer>
     <!-- Portfolio Modals-->
     <!-- Portfolio item 1 modal popup-->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal">
-                </div>
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase">Lawn Fert.</h2>
-                                <p class="item-intro text-muted">We offer lawn fertilization!</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg"
-                                    alt="Man fertilizing a lawn">
-                                <p>Our lawn fertilization process delivers essential nutrients for vibrant, healthy
-                                    grass. Using premium fertilizers and precise application techniques, we ensure
-                                    optimal absorption and lasting results. Trust us to nourish your lawn for lush,
-                                    resilient growth year-round.</p>
-                                <ul class="list-inline">
-                                    <li>
-                                        <strong>Included In:</strong>
-                                        Lloyd Special Package
-                                    </li>
-                                    <li>
-                                        <strong>Base Cost:</strong>
-                                        $50 (Subject to change)
-                                    </li>
-                                </ul>
+                                <h2 class="text-uppercase">Rehabilitated Dolphins</h2>
+                                <p class="item-intro text-muted">Back in the open sea!</p>
+                                <img class="img-fluid d-block mx-auto" src="images/dolphins.jpg"
+                                    alt="2 Dolphins looking at camera smiling">
+                                <strong>Luna and Neptune</strong>
+                                <p>During the rehabilitation process, two injured dolphins, Luna and Neptune, received
+                                    personalized care and treatment from a multidisciplinary team of experts. Through
+                                    medical interventions, physical therapy, and behavioral training, Luna and Neptune
+                                    regained their strength and health. With dedicated support, they made remarkable
+                                    progress, eventually returning to their natural habitat, where they now thrive once
+                                    more.</p>
+                                <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
+                                    type="button">
+                                    <i class="fas fa-xmark me-1"></i>
+                                    Close
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio item 2 modal popup-->
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <div class="modal-body">
+                                <!-- Project details-->
+                                <h2 class="text-uppercase">Rehabilitated Orca</h2>
+                                <p class="item-intro text-muted">Back to swimming again!</p>
+                                <img class="img-fluid d-block mx-auto" src="images/orca.jpg"
+                                    alt="Orca poking its head out of water">
+                                <strong>Aurora</strong>
+                                <p>In the compassionate hands of our team, an injured orca named Aurora underwent a
+                                    comprehensive rehabilitation journey. Through tailored medical treatments and
+                                    compassionate care, Aurora's health gradually improved. With each milestone reached,
+                                    Aurora displayed resilience and determination, inspiring all who worked with her.
+                                    Ultimately, Aurora was released back into the ocean, where she now swims freely, a
+                                    testament to the power of rehabilitation and compassion.</p>
+                                <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
+                                    type="button">
+                                    <i class="fas fa-xmark me-1"></i>
+                                    Close
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio item 3 modal popup-->
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <div class="modal-body">
+                                <!-- Project details-->
+                                <h2 class="text-uppercase">Rehabilitated Sea Turtle</h2>
+                                <p class="item-intro text-muted">Back to swimming again!</p>
+                                <img class="img-fluid d-block mx-auto" src="images/sea-turtle.jpg"
+                                    alt="sea turtle swimming in open water">
+                                <strong>Aqua</strong>
+                                <p>In our efforts to conserve marine life, we encountered a distressed sea turtle named Aqua. With patience and expertise, we provided Aqua with the necessary medical care and rehabilitation. Over time, Aqua regained strength and vitality, showcasing the remarkable resilience of these magnificent creatures. After a successful recovery, Aqua was joyfully released back into the ocean, where she now thrives, a symbol of hope for the future of sea turtle conservation.</p>
+                                <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
+                                    type="button">
+                                    <i class="fas fa-xmark me-1"></i>
+                                    Close
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio item 4 modal popup-->
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <div class="modal-body">
+                                <!-- Project details-->
+                                <h2 class="text-uppercase">Rehabilitated Seal</h2>
+                                <p class="item-intro text-muted">Back to sliding around again!</p>
+                                <img class="img-fluid d-block mx-auto" src="images/seal.jpg"
+                                    alt="seal looking up at camera">
+                                <strong>Finn</strong>
+                                <p>We recently rescued a seal named Finn. Finn was found stranded on the shore, injured from a fishing net entanglement. Through dedicated rehabilitation efforts, Finn received medical treatment and rehabilitation to heal his wounds and regain his strength. Finn's successful recovery highlights the importance of marine conservation and the impact of human actions on marine life. After rehabilitation, Finn was released back into his natural habitat, where he now thrives, serving as a reminder of the resilience of wildlife and the importance of conservation efforts.</p>
+                                <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
+                                    type="button">
+                                    <i class="fas fa-xmark me-1"></i>
+                                    Close
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio item 5 modal popup-->
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <div class="modal-body">
+                                <!-- Project details-->
+                                <h2 class="text-uppercase">Rehabilitated Shark</h2>
+                                <p class="item-intro text-muted">Back to chasing fish again!</p>
+                                <img class="img-fluid d-block mx-auto" src="images/sharkCloseUp.jpg" alt="shark swimming in open water looking at the camera">
+                                <strong>Maverick</strong>
+                                <p>Let's introduce Maverick, a shark who faced adversity after getting caught in discarded fishing nets. Maverick's journey to recovery was challenging, but with specialized care and rehabilitation, he made a remarkable turnaround. Maverick's resilience serves as a testament to the importance of marine conservation efforts in preserving the delicate balance of our oceans.</p>
+                                <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
+                                    type="button">
+                                    <i class="fas fa-xmark me-1"></i>
+                                    Close
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio item 6 modal popup-->
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <div class="modal-body">
+                                <!-- Project details-->
+                                <h2 class="text-uppercase">Rehabilitated Whale</h2>
+                                <p class="item-intro text-muted">Back to eating in the open ocean once more!</p>
+                                <img class="img-fluid d-block mx-auto" src="images/whale.jpg" alt="whale jumping out of the water">
+                                <strong>Orion</strong>
+                                <p>Introducing Orion, a magnificent humpback whale who embarked on a remarkable journey of rehabilitation after being discovered injured and stranded on a remote beach. With the help of a dedicated team of marine experts and volunteers, Orion received around-the-clock care and support to nurse him back to health. Through their tireless efforts, Orion regained his strength and was eventually released back into the vast ocean, where he now roams the depths, a testament to the power of compassion and perseverance in the face of adversity.</p>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
                                     type="button">
                                     <i class="fas fa-xmark me-1"></i>
