--- a/gallery.html
+++ b/gallery.html
@@ -26,17 +26,17 @@
     <nav class="mobile-nav">
         <div id="nav-links">
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="partnership.html">Partnership</a>
+            <a href="courses.html">Courses</a>
+            <a href="membership.html">Membership</a>
+            <a href="conservation.html">Conservation</a>
             <a href="gallery.html">Gallery</a>
-            <a href="faqs.html">FAQs</a>
             <a href="contact.html">Contact Us</a>
         </div>
         <a class="nav-icon" onclick="menu()">
             <div id="icon">&#9776;</div>
         </a>
     </nav>
-    <nav>
+    <nav class="tab-desk">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="courses.html">Courses</a></li>
@@ -350,6 +350,7 @@
     </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
