--- a/membership.html
+++ b/membership.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PADI AWARE Foundation | Membership</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
@@ -14,17 +17,17 @@
     <nav class="mobile-nav">
         <div id="nav-links">
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="partnership.html">Partnership</a>
+            <a href="courses.html">Courses</a>
+            <a href="membership.html">Membership</a>
+            <a href="conservation.html">Conservation</a>
             <a href="gallery.html">Gallery</a>
-            <a href="faqs.html">FAQs</a>
             <a href="contact.html">Contact Us</a>
         </div>
         <a class="nav-icon" onclick="menu()">
             <div id="icon">&#9776;</div>
         </a>
     </nav>
-    <nav>
+    <nav class="tab-desk">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="courses.html">Courses</a></li>
@@ -77,5 +80,6 @@
 			<a href="https://www.twitter.com/" target="_blank"><img src="images/twitter-logo.png" alt="Twitter Logo"></a>
 		</div>
 	</footer>
+    <script src="script.js"></script>
 </body>
 </html>
