added jumbotron image, updated style rules

--- a/gallery.html
+++ b/gallery.html
@@ -156,7 +156,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Rehabilitated Whale</div>
-                                <div class="portfolio-caption-subheading text-muted">Introducion Orion!</div>
+                                <div class="portfolio-caption-subheading text-muted">Introducing Orion!</div>
                             </div>
                         </div>
                     </div>
