--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     File name: index.html
 -->
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,11 +15,12 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
+
 <body>
     <header>
         <h1>PADI AWARE Foundation</h1>
     </header>
-     <!-- Mobile Nav -->
+    <!-- Mobile Nav -->
     <nav class="mobile-nav">
         <div id="nav-links">
             <a href="index.html">Home</a>
@@ -44,27 +46,45 @@
     </nav>
 
     <main>
+        <!-- Jumbotron Section -->
+        <section class="jumbotron text-center position-relative text-white">
+            <img src="images/manta.jpg" class="img-fluid" alt="Jumbotron Image">
+            <div class="container position-absolute top-50 start-50 translate-middle">
+                <h1 class="display-4">Welcome to PADI AWARE Foundation</h1>
+                <p class="lead">Conserving the underwater world through partnerships, actions, and education.</p>
+            </div>
+        </section>
+
+        <!-- About Section -->
         <section>
             <h2>About PADI</h2>
-            <p>The Professional Association of Diving Instructors (PADI) is the world's leading scuba diver training organization.</p>
-            <p>With more than 6,600 dive centers and resorts, and 137,000 individual PADI Professionals worldwide, PADI training materials and services let you experience scuba diving from nearly anywhere.</p>
+            <p>The Professional Association of Diving Instructors (PADI) is the world's leading scuba diver training
+                organization.</p>
+            <p>With more than 6,600 dive centers and resorts, and 137,000 individual PADI Professionals worldwide, PADI
+                training materials and services let you experience scuba diving from nearly anywhere.</p>
         </section>
+
+        <!-- Mission Section -->
         <section>
             <h2>Our Mission</h2>
-            <p>The mission of the PADI AWARE Foundation is to conserve the underwater world through partnerships, actions, and education.</p>
+            <p>The mission of the PADI AWARE Foundation is to conserve the underwater world through partnerships,
+                actions, and education.</p>
         </section>
     </main>
 
-	<footer>
-		<div class="copyright">
-			<p>&copy; Copyright 2021. All Rights Reserved.</p>
-			<p><a href="mailto:jeeed@gmail.com">padi@gmail.com</a></p>
-		</div>
-		<div class="social">
-			<a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-logo.png" alt="Facebook Logo"></a>
-			<a href="https://www.twitter.com/" target="_blank"><img src="images/twitter-logo.png" alt="Twitter Logo"></a>
-		</div>
-	</footer>
+    <footer class="bg-dark">
+        <div class="copyright">
+            <p>&copy; Copyright 2021. All Rights Reserved.</p>
+            <p><a href="mailto:jeeed@gmail.com">padi@gmail.com</a></p>
+        </div>
+        <div class="social">
+            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-logo.png"
+                    alt="Facebook Logo"></a>
+            <a href="https://www.twitter.com/" target="_blank"><img src="images/twitter-logo.png"
+                    alt="Twitter Logo"></a>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
