--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Sedan:ital@0;1&display=swap" rel="stylesheet">
-
-
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
 </head>
 
 <body>
@@ -55,8 +58,8 @@
         <section class="jumbotron text-center position-relative text-white">
             <img src="images/manta.jpg" class="img-fluid" alt="Jumbotron Image">
             <div class="container position-absolute top-50 start-50 translate-middle">
-                <h1 class="display-4">Welcome to PADI AWARE Foundation</h1>
-                <p class="lead">Conserving the underwater world through partnerships, actions, and education.</p>
+                <div class="masthead-heading text-uppercase">Welcome to PADI AWARE Foundation</h1>
+                <div class="masthead-subheading">Conserving the underwater world through partnerships, actions, and education.</p>
             </div>
         </section>
 
@@ -77,7 +80,7 @@
         </section>
     </main>
 
-    <footer class="bg-dark">
+    <footer>
         <div class="copyright">
             <p>&copy; Copyright 2021. All Rights Reserved.</p>
             <p><a href="mailto:jeeed@gmail.com">padi@gmail.com</a></p>
